@@ -3,5 +3,7 @@ Changes
 META.yml
 README.md
 Makefile.PL
-t/test.t
+t/01_test.t
+t/10_uescape.t
+t/20_stringcont.t
 lib/JSON/Relaxed.pm
