@@ -2,6 +2,8 @@ Revision history for JSON-Relaxed
 
 0.000
 	- Add \uXXXXX escapes in strings. (Issue #3)
+	- Allow strings to be joined when separated with \ \n.
+	  (This is an extension to the speification.)
 	- Docs and layout changes.
 
 0.060	2024-03-13
